<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/main_ll"
    android:orientation="vertical">

    <TextView
        android:id="@+id/topcenter_tv"
        android:layout_weight="1"
        android:visibility="gone"
        android:background="#00000000"
        android:layout_width="match_parent"
        android:layout_height="0dp" />
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/data_sec_bg"
            android:orientation="horizontal"
            >

            <TextView
                android:id="@+id/tv_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/cancel"
                android:visibility="invisible"
                android:textColor="@color/date_picker_text_light"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="@dimen/widget_size_10"
                android:text="选择生日"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textStyle="bold" />


            <ImageView
                android:id="@+id/iv_cancel"
                android:layout_width="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_gravity="center"
                android:src="@mipmap/back_close_gray"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:visibility="gone"
            android:layout_height="0.5dp"
            android:background="@color/date_picker_divider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/date_picker_bg"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="20dp"
            android:paddingEnd="20dp"
            android:paddingStart="20dp"
            android:paddingTop="15dp">

            <com.fengyuxing.tuyu.datepicker.PickerView
                android:id="@+id/dpv_year"
                android:layout_width="0dp"
                android:layout_height="@dimen/picker_view_height"
                android:layout_weight="3" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/year"
                android:textColor="@color/date_picker_text_col"
                android:textSize="@dimen/date_text_size" />

            <com.fengyuxing.tuyu.datepicker.PickerView
                android:id="@+id/dpv_month"
                android:layout_width="0dp"
                android:layout_height="@dimen/picker_view_height"
                android:layout_weight="2" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/month"
                android:textColor="@color/date_picker_text_col"
                android:textSize="@dimen/date_text_size" />

            <com.fengyuxing.tuyu.datepicker.PickerView
                android:id="@+id/dpv_day"
                android:layout_width="0dp"
                android:layout_height="@dimen/picker_view_height"
                android:layout_weight="2" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/day"
                android:textColor="@color/date_picker_text_col"
                android:textSize="@dimen/date_text_size" />

            <com.fengyuxing.tuyu.datepicker.PickerView
                android:id="@+id/dpv_hour"
                android:layout_width="0dp"
                android:layout_height="@dimen/picker_view_height"
                android:layout_weight="2" />

            <TextView
                android:id="@+id/tv_hour_unit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/hour"
                android:textColor="@color/date_picker_text_dark"
                android:textSize="@dimen/date_unit_text_size" />

            <com.fengyuxing.tuyu.datepicker.PickerView
                android:id="@+id/dpv_minute"
                android:layout_width="0dp"
                android:layout_height="@dimen/picker_view_height"
                android:layout_weight="2" />

            <TextView
                android:id="@+id/tv_minute_unit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/minute"
                android:textColor="@color/date_picker_text_dark"
                android:textSize="@dimen/date_unit_text_size" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_confirm"
            android:background="@drawable/login_bg"
            android:layout_width="match_parent"
            android:text="完成"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:textColor="#ffffffff"
            android:layout_marginBottom="20dp"
            android:textSize="18sp"
            android:layout_height="50dp" />

    </LinearLayout>


</LinearLayout>